# open-audit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: auto-tag.yml  release.yml
.oaudit/auditors/trusted/: infra.md  llm-security.md  privacy.md  security.md  supply-chain.md
.oaudit/auditors/untrusted/: infra.md  llm-security.md  privacy.md  security.md  supply-chain.md
.stamp/: config.yml  mirror.yml
.stamp/reviewers/: example.md  rust.md  security.md
bridges/ui-leaf/: FRICTION.md  bridge.js  package-lock.json  package.json
bridges/ui-leaf/views/: spec.tsx
src/: builtins.rs  claude_session.rs  cli.rs  config.rs  evidence.rs  finding.rs  init.rs  main.rs  output.rs  render.rs  resolve.rs  run.rs  sandbox.rs  spec.rs  update.rs
src/subject/: file.rs  mod.rs  repo.rs  text.rs
