[package]
name = "open-audit"
version = "0.1.0"
edition = "2024"
description = "CLI for auditing codebases against composable spec docs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/OpenThinkAi/open-audit"

[[bin]]
name = "oaudit"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# async + process
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "sync"] }

# error handling
anyhow = "1"
thiserror = "2"

# serde + formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
gray_matter = "0.3"

# fs / repo walking
ignore = "0.4"
glob = "0.3"

# git
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# misc
tempfile = "3"
console = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
